# cfg_test

./: .gitignore  CMakeLists.txt  LICENSE  build_ninja.sh  build_v142_x64.cmd  readme.md
projects/: CMakeLists.txt
projects/CfgControl/: CMakeLists.txt
projects/CfgControl/cmake/: CfgControl-config.cmake.in
projects/CfgControl/include/cfgcontrol/: cfgcontrol.hpp  types.hpp  visibility.hpp
projects/CfgControl/src/: cfgcontrol.cpp
projects/CfgControl/src/backends/: backends.cpp  backends.hpp  ini_parser.cpp  ini_parser.hpp  json_parser.cpp  json_parser.hpp  parser_manager.cpp  parser_manager.hpp
projects/CfgControl/src/backends/get_meta_info/: get_meta_info.cpp  get_meta_info.hpp
projects/CfgControl/src/utilities/: utilities.hpp
projects/CfgControl/src/utilities/INIReader/: INIReader.cpp  INIReader.h  readme.txt
projects/CfgTest/: CMakeLists.txt
projects/CfgTest/cmake/: CfgTest-config.cmake.in
projects/CfgTest/src/: main.cpp
scripts/: vscode.cmd
